--- a/test/test.html
+++ b/test/test.html
@@ -112,14 +112,15 @@
           <div class="mermaid">
             <pre>
               %%{init: {'theme': 'dark', 'themeVariables': { 'darkMode': true }}}%%
-              stateDiagram-v2
-                [*] --> Still
-                Still --> [*]
-
-                Still --> Moving
-                Moving --> Still
-                Moving --> Crash
-                Crash --> [*]
+              journey
+                title My working day
+                section Go to work
+                  Make tea: 5: Me
+                  Go upstairs: 3: Me
+                  Do work: 1: Me, Cat
+                section Go home
+                  Go downstairs: 5: Me
+                  Sit down: 5: Me
             </pre>
           </div>
         </section>
