--- a/test/test.html
+++ b/test/test.html
@@ -7,7 +7,7 @@
 
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/reveal.js@4.2.1/dist/reveal.css"
+      href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/reveal.css"
     />
     <link rel="stylesheet" href="../node_modules/qunit/qunit/qunit.css" />
     <script src="../node_modules/qunit/qunit/qunit.js"></script>
@@ -178,6 +178,25 @@
             </pre>
           </div>
         </section>
+        <section>
+          <h3>GitGraph Diagram</h3>
+          <div class="mermaid">
+            <pre>
+              %%{init: {'theme': 'dark', 'themeVariables': { 'darkMode': true }}}%%
+              gitGraph
+                commit
+                commit
+                branch develop
+                checkout develop
+                commit
+                commit
+                checkout main
+                merge develop
+                commit
+                commit
+            </pre>
+          </div>
+        </section>
 
         <section>
           <h3>Error</h3>
@@ -191,7 +210,7 @@
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js@4.2.1/dist/reveal.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/reveal.js"></script>
     <script src="../plugin/mermaid/mermaid.js"></script>
     <script>
       window.location.hash = "";
