--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/reveal.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js-mermaid-plugin"></script>
+    <script src="https://cdn.jsdelivr.net/npm/reveal.js-mermaid-plugin@0.0.3/plugin/mermaid/mermaid.js"></script>
     <script>
       Reveal.initialize({
         controls: true,
