docs: mermaid initialize config

--- a/index.html
+++ b/index.html
@@ -225,6 +225,13 @@
         center: true,
         hash: true,
 
+        // mermaid initialize config
+        mermaid: {
+          // flowchart: {
+          //   curve: 'linear',
+          // },
+        },
+
         plugins: [RevealMermaid],
       });
     </script>
