feat: update mermaid v10

--- a/test/test.html
+++ b/test/test.html
@@ -199,6 +199,31 @@
         </section>
 
         <section>
+          <h3>Mindmap</h3>
+          <div class="mermaid" style="height: 400px; overflow: auto;">
+            <pre>
+              mindmap
+                root((mindmap))
+                  Origins
+                    Long history
+                    ::icon(fa fa-book)
+                    Popularisation
+                      British popular psychology author Tony Buzan
+                  Research
+                    On effectiveness and features
+                    On Automatic creation
+                      Uses
+                          Creative techniques
+                          Strategic planning
+                          Argument mapping
+                  Tools
+                    Pen and paper
+                    Mermaid
+            </pre>
+          </div>
+        </section>
+
+        <section>
           <h3>Error</h3>
           <div class="mermaid mermaid-parse-error">
             <pre>
