--- a/index.html
+++ b/index.html
@@ -238,6 +238,20 @@
             </pre>
           </div>
         </section>
+
+        <section>
+          <h3>Sankey</h3>
+          <div class="mermaid">
+            <pre>
+              sankey-beta
+
+              %% source,target,value
+              Electricity grid,Over generation / exports,104.453
+              Electricity grid,Heating and cooling - homes,113.726
+              Electricity grid,H2 conversion,27.14
+            </pre>
+          </div>
+        </section>
       </div>
     </div>
 
