--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
         <section>
           <h3>Mindmap</h3>
-          <div class="mermaid" style="height: 400px; overflow: auto;">
+          <div class="mermaid" style="height: 400px; overflow: auto">
             <pre>
               mindmap
                 root((mindmap))
@@ -268,6 +268,16 @@
         mermaid: {
           // flowchart: {
           //   curve: 'linear',
+          // },
+        },
+
+        mermaidPlugin: {
+          // beforeRender(el) {
+          //   console.log(el);
+          //   // if return false this element will not call mermaid render
+          // },
+          // afterRender(el) {
+          //   console.log(el);
           // },
         },
 
