add architecture example

--- a/index.html
+++ b/index.html
@@ -252,6 +252,25 @@
             </pre>
           </div>
         </section>
+
+        <section>
+          <h3>Architecture</h3>
+          <div class="mermaid">
+            <pre>
+            architecture-beta
+                group api(cloud)[API]
+
+                service db(database)[Database] in api
+                service disk1(disk)[Storage] in api
+                service disk2(disk)[Storage] in api
+                service server(server)[Server] in api
+
+                db:L -- R:server
+                disk1:T -- B:server
+                disk2:T -- B:db
+            </pre>
+          </div>
+        </section>
       </div>
     </div>
 
