chore: image demo

--- a/test/test.html
+++ b/test/test.html
@@ -178,6 +178,7 @@
             </pre>
           </div>
         </section>
+
         <section>
           <h3>GitGraph Diagram</h3>
           <div class="mermaid">
@@ -233,6 +234,18 @@
               Electricity grid,Over generation / exports,104.453
               Electricity grid,Heating and cooling - homes,113.726
               Electricity grid,H2 conversion,27.14
+            </pre>
+          </div>
+        </section>
+
+        <section>
+          <h3>Image</h3>
+          <div class="mermaid">
+            <pre>
+              %%{init: {'theme': 'dark', 'themeVariables': { 'darkMode': true }}}%%
+              flowchart TD
+                A@{ img: "https://placehold.co/600x400", label: "Image Label", pos: "t", w: 60, h: 60, constraint: "off" }
+                B[&lt;img src="https://placehold.co/600x400"/&gt;]
             </pre>
           </div>
         </section>
