--- a/index.html
+++ b/index.html
@@ -271,6 +271,18 @@
             </pre>
           </div>
         </section>
+
+        <section>
+          <h3>Image</h3>
+          <div class="mermaid">
+            <pre>
+              %%{init: {'theme': 'dark', 'themeVariables': { 'darkMode': true }}}%%
+              flowchart TD
+                A@{ img: "https://placehold.co/60x60", label: "Image Label", pos: "t", w: 60, h: 60, constraint: "off" }
+                B[&lt;img src="https://placehold.co/60x60"/&gt;]
+            </pre>
+          </div>
+        </section>
       </div>
     </div>
 
@@ -284,7 +296,7 @@
         hash: true,
 
         // mermaid initialize config
-        mermaid: {
+         mermaid: {
           // flowchart: {
           //   curve: 'linear',
           // },
@@ -301,6 +313,7 @@
         },
 
         plugins: [RevealMermaid],
+
       });
     </script>
   </body>
