feat: update to mermaid 11.6.0

--- a/index.html
+++ b/index.html
@@ -273,6 +273,17 @@
         </section>
 
         <section>
+          <h3>Entity Relationship Diagrams</h3>
+          <div class="mermaid">
+            <pre>
+            erDiagram
+              direction LR
+              Client ||--o{ Order : "places"
+            </pre>
+          </div>
+        </section>
+
+        <section>
           <h3>Image</h3>
           <div class="mermaid">
             <pre>
